# user-startup-rs

./: .taplo.toml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
src/utils/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: intergration_test.rs
