[package]
authors     = ["Absolutex <lxl66566@gmail.com>"]
categories  = ["command-line-utilities"]
description = "Simple cross-platform tool to make your command auto run on startup"
edition     = "2021"
homepage    = "https://github.com/lxl66566/user-startup-rs"
keywords    = ["startup", "startup-script", "startup-command", "auto-run", "autostart"]
license     = "MIT"
name        = "user-startup"
readme      = "README.md"
repository  = "https://github.com/lxl66566/user-startup-rs"
version     = "0.2.0"


[dependencies]
clap              = { version = "4.5.22", features = ["derive"], optional = true }
comfy-table       = { version = "7.1.3", optional = true }
dirs              = "5.0.1"
log               = "0.4.22"
pretty_env_logger = { version = "0.5.0", optional = true }

[dev-dependencies]
tempfile = "3.14.0"

[features]
bin     = ["clap", "comfy-table", "pretty_env_logger"]
default = ["bin"]

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true

[lib]
name = "user_startup"
path = "src/lib.rs"

[[bin]]
name              = "user-startup"
path              = "src/main.rs"
required-features = ["bin"]
