[package]
authors     = ["Absolutex <lxl66566@gmail.com>"]
categories  = ["command-line-utilities"]
description = "Simple cross-platform tool to make your command auto run on startup"
edition     = "2024"
homepage    = "https://github.com/lxl66566/user-startup-rs"
keywords    = ["startup", "startup-script", "startup-command", "auto-run", "autostart"]
license     = "MIT"
name        = "user-startup"
readme      = "README.md"
repository  = "https://github.com/lxl66566/user-startup-rs"
version     = "0.3.0"


[dependencies]
clap              = { version = "4.5", features = ["derive"], optional = true }
comfy-table       = { version = "7.1", optional = true }
dirs              = "6.0.0"
log               = "0.4"
pretty_env_logger = { version = "0.5", optional = true }

[dev-dependencies]

[features]
bin     = ["clap", "comfy-table", "pretty_env_logger"]
default = ["bin"]

[profile.release]
lto       = "thin"
opt-level = "s"
panic     = "abort"
strip     = true

[lib]
name = "user_startup"
path = "src/lib.rs"

[[bin]]
name              = "user-startup"
path              = "src/main.rs"
required-features = ["bin"]
